--- a/index.html
+++ b/index.html
@@ -2,10 +2,104 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Is is title</title>
 </head>
 <body>
-Hello, world!
-I'm the 1st lesson.
+    <h1>Header 1</h1>
+    <p>First             <strong> paragraph</strong></p>
+    <h2> Header  2  </h2>
+    <p>
+        Second<br>
+        <em>paragraph</em>
+        <img src="php.png" alt="Лого PHP">
+    </p>
+
+    <p>
+        <a href="page.html">А <strong>тут</strong> вторая страница</a>
+        <a href="#list">Список</a>
+        <a href="page.html#last">Вторая страница (последний абзац)</a>
+        <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_120x44dp.png" alt="Лого Google">
+    </p>
+
+    <p>
+        <a href="folder/page2.html" target="_blank">А тут страница в папке</a>
+    </p>
+
+    <p>
+        <a href="//www.unian.net/eurobusiness/">Ссылка на другой сайт</a>
+    </p>
+
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Ячейка 1.1</th>
+                <th>Ячейка 1.2</th>
+                <th>Ячейка 1.3</th>
+            </tr>
+            <tr>
+                <td>Ячейка 2.1</td>
+                <td>Ячейка 2.2</td>
+                <td>Ячейка 2.3</td>
+            </tr>
+        </thead>
+        <tr>
+            <td>Ячейка 3.1</td>
+            <td>Ячейка 3.2</td>
+            <td>Ячейка 3.3</td>
+        </tr>
+        <tr>
+            <td>Ячейка 4.1</td>
+            <td>Ячейка 4.2</td>
+            <td>Ячейка 4.3</td>
+        </tr>
+    </table>
+
+    <ol>
+        <li>Элемент 1</li>
+        <li>Элемент 2</li>
+        <li>Элемент 3</li>
+        <li>Элемент 4</li>
+        <li>
+            Элемент 5
+            <ol>
+                <li>Элемент 5.1</li>
+                <li>Элемент 5.2</li>
+                <li>Элемент 5.3</li>
+            </ol>
+        </li>
+    </ol>
+
+    <ul>
+        <li>Элемент 1</li>
+        <li>Элемент 2</li>
+        <li>Элемент 3</li>
+        <li>Элемент 4</li>
+        <li>Элемент 5</li>
+    </ul>
+
+    <ol>
+        <li>Элемент 1</li>
+        <li>Элемент 2</li>
+        <li>Элемент 3</li>
+        <li>Элемент 4</li>
+        <li>
+            Элемент 5
+            <ol>
+                <li>Элемент 5.1</li>
+                <li>Элемент 5.2</li>
+                <li>Элемент 5.3</li>
+            </ol>
+        </li>
+    </ol>
+
+    <ul id="list">
+        <li>Элемент 1</li>
+        <li>Элемент 2</li>
+        <li>Элемент 3</li>
+        <li>Элемент 4</li>
+        <li>Элемент 5</li>
+    </ul>
+
+
 </body>
 </html>
