--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <p>First             <strong> paragraph</strong></p>
     <h2> Header  2  </h2>
     <p>
-        Second<br>
+        <span>Second</span><br>
         <em>paragraph</em>
         <img src="php.png" alt="Лого PHP">
     </p>
@@ -32,26 +32,32 @@
     <table border="1">
         <thead>
             <tr>
-                <th>Ячейка 1.1</th>
-                <th>Ячейка 1.2</th>
-                <th>Ячейка 1.3</th>
+                <th rowspan="2">Наименование</th>
+                <th colspan="2">Стоимость</th>
             </tr>
             <tr>
-                <td>Ячейка 2.1</td>
-                <td>Ячейка 2.2</td>
-                <td>Ячейка 2.3</td>
+                <td>мин</td>
+                <td>макс</td>
             </tr>
         </thead>
-        <tr>
-            <td>Ячейка 3.1</td>
-            <td>Ячейка 3.2</td>
-            <td>Ячейка 3.3</td>
-        </tr>
-        <tr>
-            <td>Ячейка 4.1</td>
-            <td>Ячейка 4.2</td>
-            <td>Ячейка 4.3</td>
-        </tr>
+        <tbody>
+            <tr>
+                <td>Ячейка 3.1</td>
+                <td>Ячейка 3.2</td>
+                <td>Ячейка 3.3</td>
+            </tr>
+            <tr>
+                <td>Ячейка 4.1</td>
+                <td colspan="2">нет данных</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>Подвал 1</td>
+                <td>Подвал 2</td>
+                <td>Подвал 3</td>
+            </tr>
+        </tfoot>
     </table>
 
     <ol>
@@ -100,6 +106,10 @@
         <li>Элемент 5</li>
     </ul>
 
+    <article>
+        <header></header>
+        <footer></footer>
+    </article>
 
 </body>
 </html>
