--- a/index.html
+++ b/index.html
@@ -2,114 +2,200 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Is is title</title>
+    <title>Формы</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Header 1</h1>
-    <p>First             <strong> paragraph</strong></p>
-    <h2> Header  2  </h2>
-    <p>
-        <span>Second</span><br>
-        <em>paragraph</em>
-        <img src="php.png" alt="Лого PHP">
-    </p>
+    <div class="block">
+        Форма
+    </div>
 
-    <p>
-        <a href="page.html">А <strong>тут</strong> вторая страница</a>
-        <a href="#list">Список</a>
-        <a href="page.html#last">Вторая страница (последний абзац)</a>
-        <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_120x44dp.png" alt="Лого Google">
-    </p>
+    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum dignissimos dolorum quibusdam repellendus vitae?
+        Aliquid aspernatur debitis deleniti eius eum expedita nam, natus officia omnis, quaerat saepe sed tempore
+        veritatis!
+    </div>
+    <div>Blanditiis expedita hic illum inventore maxime possimus praesentium quis vel veniam voluptate. Accusantium
+        alias debitis, eligendi, excepturi harum hic ipsa ipsam laborum necessitatibus nesciunt nobis quisquam rerum
+        tempore unde voluptate?
+    </div>
+    <div class="inside">
+        Вставка
+    </div>
+    <div>Accusamus aspernatur commodi corporis debitis dignissimos distinctio dolores doloribus, ducimus eveniet
+        excepturi illo ipsa laboriosam molestiae molestias quo rerum tempora ullam voluptatum? Dolores fugit maiores
+        omnis provident quis reiciendis voluptatibus?
+    </div>
+    <div>At, iure, quos! A alias amet animi aspernatur consequuntur corporis dolor earum eum fugit, harum iste maxime
+        molestias numquam quis repellat temporibus velit voluptatibus voluptatum. Corporis deserunt maiores modi
+        similique?
+    </div>
+    <div>A accusantium aliquid, dicta et molestiae nemo repellendus repudiandae vero voluptas voluptatibus? Architecto
+        at cumque delectus dolorum esse excepturi inventore, libero, magni minus nam numquam provident quaerat
+        reiciendis, repudiandae rerum?
+    </div>
+    <div>Consequuntur esse ipsam iste non reiciendis sit suscipit tempore? Atque cumque deserunt dolor dolorum harum
+        ipsam perspiciatis qui sunt. Architecto doloremque impedit nam nihil numquam officiis porro sequi tempore totam!
+    </div>
+    <div>Corporis est fugit incidunt libero numquam quas reiciendis sunt voluptas! Aperiam assumenda, beatae consectetur
+        corporis dignissimos doloribus eveniet explicabo inventore, laboriosam perferendis porro quod repellat, sapiente
+        tempora temporibus unde velit.
+    </div>
+    <div>Aliquid consectetur cum facere facilis fuga, hic inventore ipsam ipsum labore laboriosam molestias nam nulla
+        omnis quam quas quasi quibusdam quidem ratione reiciendis repudiandae rerum similique tempore velit vero
+        voluptatibus!
+    </div>
+    <div>Enim ipsum laudantium quibusdam ut veniam. Adipisci alias animi, atque aut distinctio enim est, et excepturi
+        ipsa iusto, laborum omnis optio pariatur perspiciatis possimus qui repellat rerum sequi soluta tempora!
+    </div>
+    <div>Accusantium animi doloremque, doloribus dolorum excepturi impedit ipsam itaque minima necessitatibus nisi
+        numquam odio, quaerat quas quibusdam quo repellendus ullam velit veritatis vero voluptas. Dolor illum laudantium
+        non voluptate voluptatum.
+    </div>
+    <div>Ad architecto aut distinctio dolore eaque esse, et expedita id incidunt ipsa laudantium minima modi nihil nobis
+        obcaecati possimus quae quas quasi, quod rem repellendus sunt temporibus totam ullam voluptate.
+    </div>
+    <div>Accusantium alias beatae blanditiis commodi delectus deserunt earum est excepturi, facere, fugiat fugit in
+        inventore ipsa labore modi mollitia nostrum quia quibusdam temporibus tenetur ullam unde vitae voluptate. Ex,
+        officiis.
+    </div>
+    <div>Ad amet aperiam architecto blanditiis cupiditate dicta dolore eligendi esse, id impedit in itaque iure magnam
+        magni maiores molestias odit officia officiis recusandae sit vel vero voluptatem voluptates voluptatibus
+        voluptatum.
+    </div>
+    <div>Adipisci alias cum eos facilis incidunt ipsum itaque libero nam omnis perspiciatis placeat quasi qui quia
+        quibusdam quisquam, rem repudiandae rerum sequi similique sunt, tempore ullam unde vero voluptate voluptates?
+    </div>
+    <div>Architecto doloremque dolores ducimus eos! Amet atque doloremque ipsam magnam maxime nam numquam provident qui
+        quidem veritatis. Aliquam delectus dolore ducimus eos fugiat labore nesciunt porro quaerat unde veritatis!
+        Dolorum?
+    </div>
+    <div>Aliquid assumenda cum ducimus fuga, id numquam obcaecati omnis praesentium quas, quidem recusandae sunt
+        temporibus unde. Architecto dolorem eveniet fugit, harum hic iure maxime odio quas tempore velit. Laboriosam,
+        ratione.
+    </div>
+    <div>Aliquid expedita facilis iure placeat quasi ut. Aspernatur atque consequuntur dolore eaque facilis inventore
+        non possimus quia quisquam soluta. Blanditiis commodi, cum eaque error illo laborum libero molestiae ullam
+        voluptatum?
+    </div>
+    <div>Laboriosam maxime, molestias quaerat sint tempora ullam vel voluptas. Aperiam atque cupiditate deleniti minus
+        nisi officia officiis omnis ullam velit voluptatum. Accusantium at ea eaque facere necessitatibus, quis
+        voluptate voluptates!
+    </div>
+    <div>Assumenda blanditiis cum dicta dolorum earum, ex explicabo fugit hic illum impedit ipsum libero nesciunt nisi
+        praesentium quam rem, similique, veritatis. Accusamus assumenda cumque doloribus in laboriosam, nam quaerat
+        quas!
+    </div>
+    <div>Accusamus culpa cum deserunt dolorem doloremque eligendi minus necessitatibus perspiciatis, qui quibusdam
+        quidem quo quod sint sit tenetur vitae voluptatibus. Ab aliquid assumenda fuga minima modi repellat saepe
+        tenetur voluptas?
+    </div>
 
-    <p>
-        <a href="folder/page2.html" target="_blank">А тут страница в папке</a>
-    </p>
+    <form action="index.html" method="get">
+        <div>
+            <label for="first_name">Ваше имя</label>
+            <input class="person" id="first_name" name="first_name" placeholder="Ваше имя" value="Глеб">
+        </div>
 
-    <p>
-        <a href="//www.unian.net/eurobusiness/">Ссылка на другой сайт</a>
-    </p>
+        <div>
+            <label>
+                Фамилия
+                <input class="person" name="last_name" placeholder="Фамилия">
+            </label>
+        </div>
 
-    <table border="1">
-        <thead>
-            <tr>
-                <th rowspan="2">Наименование</th>
-                <th colspan="2">Стоимость</th>
-            </tr>
-            <tr>
-                <td>мин</td>
-                <td>макс</td>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Ячейка 3.1</td>
-                <td>Ячейка 3.2</td>
-                <td>Ячейка 3.3</td>
-            </tr>
-            <tr>
-                <td>Ячейка 4.1</td>
-                <td colspan="2">нет данных</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <td>Подвал 1</td>
-                <td>Подвал 2</td>
-                <td>Подвал 3</td>
-            </tr>
-        </tfoot>
-    </table>
+        <div>
+            <label>
+                Адрес
+                <textarea name="address">Яворницкого, 5</textarea>
+            </label>
+        </div>
 
-    <ol>
-        <li>Элемент 1</li>
-        <li>Элемент 2</li>
-        <li>Элемент 3</li>
-        <li>Элемент 4</li>
-        <li>
-            Элемент 5
-            <ol>
-                <li>Элемент 5.1</li>
-                <li>Элемент 5.2</li>
-                <li>Элемент 5.3</li>
-            </ol>
-        </li>
-    </ol>
+        <div>
+            <label>
+                Посещаю курсы программирования
+                <input type="checkbox" name="courses" value="1" checked>
+            </label>
+        </div>
 
-    <ul>
-        <li>Элемент 1</li>
-        <li>Элемент 2</li>
-        <li>Элемент 3</li>
-        <li>Элемент 4</li>
-        <li>Элемент 5</li>
-    </ul>
+        <div>
+            Вожу автомобиль
+            <label>
+                <input type="radio" name="driving" value="1" checked>
+                Да
+            </label>
+            <label>
+                <input type="radio" name="driving" value="2">
+                Нет
+            </label>
+        </div>
 
-    <ol>
-        <li>Элемент 1</li>
-        <li>Элемент 2</li>
-        <li>Элемент 3</li>
-        <li>Элемент 4</li>
-        <li>
-            Элемент 5
-            <ol>
-                <li>Элемент 5.1</li>
-                <li>Элемент 5.2</li>
-                <li>Элемент 5.3</li>
-            </ol>
-        </li>
-    </ol>
+        <div>
+            Хожу в кино
+            <label>
+                <input type="radio" name="cinema" value="1">
+                Да
+            </label>
+            <label>
+                <input type="radio" name="cinema" value="2" checked>
+                Нет
+            </label>
+        </div>
 
-    <ul id="list">
-        <li>Элемент 1</li>
-        <li>Элемент 2</li>
-        <li>Элемент 3</li>
-        <li>Элемент 4</li>
-        <li>Элемент 5</li>
-    </ul>
+        <div>
+            <label>
+                Область
+                <select name="region">
+                    <option></option>
+                    <optgroup label="Д">
+                        <option value="4">Днепропетровская</option>
+                        <option value="5">Донецкая</option>
+                    </optgroup>
+                    <optgroup label="З">
+                        <option value="8">Запорожская</option>
+                    </optgroup>
+                </select>
+            </label>
+        </div>
 
-    <article>
-        <header></header>
-        <footer></footer>
-    </article>
+        <div>
+            <label>
+                Найти
+                <input type="search" name="term">
+            </label>
+        </div>
 
+        <div>
+            <label>
+                Дата рождения
+                <input type="date" name="birthday">
+            </label>
+        </div>
+
+        <div>
+            <label>
+                Email
+                <input type="email" name="email">
+            </label>
+        </div>
+
+        <div>
+            <label>
+                Пароль
+                <input type="password" name="password">
+            </label>
+        </div>
+
+        <div>
+            <label>
+                Возраст
+                <input type="number" name="age" min="5" max="100">
+            </label>
+        </div>
+
+        <div>
+            <input type="submit" value="Сохранить">
+            <input type="reset" value="Сброс">
+        </div>
+    </form>
 </body>
 </html>
