--- a/index.html
+++ b/index.html
@@ -5,14 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<input type="number" id="op1" placeholder="Operand 1" value="0">
-<input type="number" id="op2" placeholder="Operand 2" value="0">
-<button id="plus">+</button>
-<button id="minus">-</button>
-<button id="multiply">*</button>
-<button id="divide">/</button>
-<span id="result">0</span>
 
-<script src="scripts.js"></script>
+<script src="sum10.js"></script>
 </body>
 </html>
